FSD Mini Project
Here is my FSD Mini project using Html & CSS.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>
-        Basic web Page
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CoFFee Shop</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
-<Basic 
+    <div class="navbar">
+        <div class="logo">
+            <img src="Image/logo.png" alt="Logo">
+        </div>
+        <ul class="navlist">
+            <li><a href="#" target="_blank">Home</a></li>
+            <li><a href="linked/registration.html" target="_blank">Registration</a></li>
+            <li><a href="linked/login.html" target="_blank">Login</a></li>
+            <li><a href="linked/products.html" target="_blank">Product</a></li>
+            <li><a href="linked/cart.html" target="_blank">Cart</a></li>
+            <li class="slider"></li>
+        </ul>
+    </div>
+    <section class="hero">
+        <div class="hero_split left">
+            <div class="content">
+                <h1>Coffee Time</h1>
+                <p>Coffee is a popular beverage made from roasted coffee beans, which are the seeds of berries from the Coffea plant. It's known for its rich aroma and stimulating effects due to its caffeine content. Coffee can be enjoyed in various forms, such as espresso, latte, cappuccino, and more. It's a staple in many people's daily routines, offering a moment of relaxation or a boost of energy.</p>
+                <a href="linked/products.html"><button>Catalogue</button></a>
+            </div>
+        </div>
+        <div class="middle">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
 
-    <h2>  This is a link for ABES website</h2>
-     <a href="https://abes.ac.in"> Go to ABES</a>
-     
+        </div>
+        <div class="hero_split right">
+            <img src="Image/Coffee cup.png" alt="">
 
+        </div>
+    </section>
+    <footer>
+        <div class="footerdiv">
+            <h3 style="text-align: center; color:rgb(126, 174, 216)"><br>Made By Agrim Gupta</h3>
+            <br>
+            <p style="text-align: end;">LinkedIn:- <a style="color: rgb(243, 165, 165);" href="https://www.linkedin.com/in/gupta-agrim/">Agrimg8@gmail.com</a></p>
+    
+        </div>
+    </footer>
 
-
-    </body>
+</body>
 </html>
